; ModuleID = '/home/carl/AnghaBench/git/extr_trailer.c_ensure_configured.c'
source_filename = "/home/carl/AnghaBench/git/extr_trailer.c_ensure_configured.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32, i32 }

@configured = common dso_local global i32 0, align 4
@WHERE_END = common dso_local global i32 0, align 4
@default_conf_info = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@EXISTS_ADD_IF_DIFFERENT_NEIGHBOR = common dso_local global i32 0, align 4
@MISSING_ADD = common dso_local global i32 0, align 4
@git_trailer_default_config = common dso_local global i32 0, align 4
@git_trailer_config = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @ensure_configured to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ensure_configured() #0 {
  %1 = load i32, i32* @configured, align 4
  %2 = icmp ne i32 %1, 0
  br i1 %2, label %3, label %4

3:                                                ; preds = %0
  br label %12

4:                                                ; preds = %0
  %5 = load i32, i32* @WHERE_END, align 4
  store i32 %5, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @default_conf_info, i32 0, i32 2), align 4
  %6 = load i32, i32* @EXISTS_ADD_IF_DIFFERENT_NEIGHBOR, align 4
  store i32 %6, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @default_conf_info, i32 0, i32 1), align 4
  %7 = load i32, i32* @MISSING_ADD, align 4
  store i32 %7, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @default_conf_info, i32 0, i32 0), align 4
  %8 = load i32, i32* @git_trailer_default_config, align 4
  %9 = call i32 @git_config(i32 %8, i32* null)
  %10 = load i32, i32* @git_trailer_config, align 4
  %11 = call i32 @git_config(i32 %10, i32* null)
  store i32 1, i32* @configured, align 4
  br label %12

12:                                               ; preds = %4, %3
  ret void
}

declare dso_local i32 @git_config(i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
